--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-# mikeadams1.github.io
+You have entered the domain of mikeadams1.github.io
+Here you will find interesting hacks that are mostly from the Solid Distribution of Code.
