--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <a href="https://mikeadams1.github.io/form-playground/" class="btn btn-primary">Forms</a>
 <a href="https://index.solid.community/public/8-2/test4.html" class="btn btn-primary">Search</a>
 <a href="https://index.solid.community/public/camera/solid-cam.html" class="btn btn-primary">Camera</a>
-<a href="https://index.solid.community" class="btn btn-primary">Indedx</a>
+<a href="https://index.solid.community" class="btn btn-primary">Index</a>
   </div>
 </p>
 
@@ -29,30 +29,6 @@
  
     <section class="row">
     <div class="col-md-12">
-
-
-
-<body>
-<div class="container">
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a href="/" class="navbar-brand">Solid Pod Index &ndash;</a>
-      </div>
-      <div class="nav navbar-right navbar-form">
-        <button id="session-action" type="button" class="session-action btn btn-default navbar-btn">Loading...</button>
-      </div>
-    </div>
-  </nav>
-  
-  
-
-  <p class="lead">
-    <span>
-     Solid Index Pod
-    </span>
-    <a href="https://index.solid.community/profile/card#me"><mark>https://index.solid.community/profile/card#me</mark></a>.
-  <p>
 
 
   </section>
