--- a/public.html
+++ b/public.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8"/>
+    <title>Solid Data Browser</title>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        panes.runDataBrowser()
+      })
+    </script>
+  <link href="https://mikeadams1.github.io/mashlib-library/timblmash.css" rel="stylesheet"></head>
+  <body class="db-layout">
+    <!-- solid-panes' OutlineManager injects into this element -->
+    <header class="db-layout__header header" id="PageHeader"></header>
+    <div class="TabulatorOutline db-layout__content" id="DummyUUID">
+        <table id="outline"></table>
+    </div>
+    <footer class="db-layout__footer" id="PageFooter"></footer>
+  <script type="text/javascript" src="https://mikeadams1.github.io/form-playground/mashlib.js"></script></body>
+</html>
