--- a/public.html
+++ b/public.html
@@ -18,3 +18,6 @@
     <footer class="db-layout__footer" id="PageFooter"></footer>
   <script type="text/javascript" src="https://mikeadams1.github.io/form-playground/mashlib.js"></script></body>
 </html>
+
+
+<div class="instancePane" style="  border-top: solid 1px #777; border-bottom: solid 1px #777; margin-top: 0.5em; margin-bottom: 0.5em "><table><tr predtr="true"><td about="<http://www.w3.org/ns/ldp#contains>" class="pred" style="min-width: 3em;"></td><td style="margin: 0.2em; border: none; padding: 0; vertical-align: top;" notselectable="false" about="<https://index.solid.community/public/8-2/>" class="obj"><img src="https://solid.github.io/solid-ui/src/originalIcons/tbl-expand-trans.png"><span about="<https://index.solid.community/public/8-2/>" draggable="true">8 2</span></td></tr><tr predtr="true"><td about="<http://www.w3.org/ns/ldp#contains>" class="pred" style="min-width: 3em;"></td><td style="margin: 0.2em; border: none; padding: 0; vertical-align: top;" notselectable="false" about="<https://index.solid.community/public/another%20test/>" class="obj"><img src="https://solid.github.io/solid-ui/src/originalIcons/tbl-expand-trans.png"><span about="<https://index.solid.community/public/another%20test/>" 
